# polaris

./: .gitignore  CREDITS.md  KNOWN_GOTCHAS.md  LAB.md  README.md  pyproject.toml
data/: README.md  prepare_shakespeare.py  prepare_tinystories.py
env/: check-matmul.py  container-run.md  run-container.sh
experiments/: README.md
experiments/configs/: dense.yaml
polaris/: __init__.py  config.py  instrumentation.py  model.py  sample.py  train.py
polaris/ffn/: __init__.py  base.py  dense.py  moe.py
